--- a/Challenger/StoryBoards/SearchGroups.storyboard
+++ b/Challenger/StoryBoards/SearchGroups.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fJc-uz-IXr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fJc-uz-IXr">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -36,14 +36,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hzH-s8-oBp">
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="hzH-s8-oBp">
                                 <rect key="frame" x="0.0" y="64" width="375" height="56"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hme-y1-HX9">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hme-y1-HX9">
                                 <rect key="frame" x="0.0" y="120" width="375" height="547"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CustomCell" rowHeight="126" id="gTc-Py-wfj" customClass="CellGroups" customModule="Challenger" customModuleProvider="target">
@@ -85,6 +83,15 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="hme-y1-HX9" secondAttribute="bottom" id="5il-xZ-d4i"/>
+                            <constraint firstItem="hme-y1-HX9" firstAttribute="trailing" secondItem="zA0-Pt-MSZ" secondAttribute="trailing" id="GDY-nE-MQB"/>
+                            <constraint firstItem="hzH-s8-oBp" firstAttribute="top" secondItem="zA0-Pt-MSZ" secondAttribute="top" id="Z6V-SK-49p"/>
+                            <constraint firstItem="hzH-s8-oBp" firstAttribute="trailing" secondItem="zA0-Pt-MSZ" secondAttribute="trailing" id="fZn-Vo-6Wa"/>
+                            <constraint firstItem="hme-y1-HX9" firstAttribute="top" secondItem="hzH-s8-oBp" secondAttribute="bottom" id="hv4-zG-mvJ"/>
+                            <constraint firstItem="hzH-s8-oBp" firstAttribute="leading" secondItem="zA0-Pt-MSZ" secondAttribute="leading" id="juI-mK-M15"/>
+                            <constraint firstItem="hme-y1-HX9" firstAttribute="leading" secondItem="zA0-Pt-MSZ" secondAttribute="leading" id="tEy-56-b1o"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="zA0-Pt-MSZ"/>
                     </view>
                     <navigationItem key="navigationItem" title="Search Groups" id="pjd-mU-eDx"/>
