--- a/Challenger/StoryBoards/Calendar.storyboard
+++ b/Challenger/StoryBoards/Calendar.storyboard
@@ -138,7 +138,7 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bom-bt-cyf">
+                                                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bom-bt-cyf">
                                                             <rect key="frame" x="53" y="62" width="5" height="5"/>
                                                             <color key="backgroundColor" red="0.76078431369999999" green="0.2470588235" blue="0.2274509804" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
